--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -5,6 +5,6 @@ metadata:
   annotations:
     github.com/project-slug: cpul/minimatch
 spec:
-  type: other
+  type: library
   lifecycle: unknown
   owner: guests
